[project]
name = "tiktok_profile_messaging_agent"
version = "0.1.0"
description = "tiktok_profile_messaging_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
tiktok_profile_messaging_agent = "tiktok_profile_messaging_agent.main:run"
run_crew = "tiktok_profile_messaging_agent.main:run"
train = "tiktok_profile_messaging_agent.main:train"
replay = "tiktok_profile_messaging_agent.main:replay"
test = "tiktok_profile_messaging_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
